load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "task",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//rust:__subpackages__"],
    deps = [
        "//rust/lib/core",
        "//rust/lib/kv",
        "//rust/lib/sql",
        "//rust/lib/tsdb",
        "@crates//:axum",
        "@crates//:chrono",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tokio-util",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "task_test",
    crate = ":task",
    deps = [
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
)
