load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "openerp_codegen_lib",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "openerp_codegen_lib",
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "tests",
    srcs = glob(["tests/**/*.rs"]),
    crate_name = "integration_test",
    edition = "2021",
    deps = [
        ":openerp_codegen_lib",
    ],
)
