load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "ir",
    crate_name = "openerp_ir",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_test(
    name = "ir_test",
    crate = ":ir",
)
