load("@rules_rust//rust:defs.bzl", "rust_proc_macro")

rust_proc_macro(
    name = "openerp_codegen_macro",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "openerp_codegen_macro",
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:syn",
        "@crates//:quote",
        "@crates//:proc-macro2",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)
