load("@rules_rust//rust:defs.bzl", "rust_proc_macro")

rust_proc_macro(
    name = "macro",
    crate_name = "openerp_dsl_macro",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "//rust/lib/api/ir",
        "//rust/lib/api/parser",
        "@crates//:syn",
        "@crates//:quote",
        "@crates//:proc-macro2",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)
