load("@rules_rust//rust:defs.bzl", "rust_test")

rust_test(
    name = "macro_test",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    proc_macro_deps = [
        "//rust/lib/api/macro",
    ],
    deps = [
        "//rust/lib/api/ir",
        "//rust/lib/core",
        "//rust/lib/kv",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:uuid",
        "@crates//:chrono",
        "@crates//:tempfile",
    ],
)
