load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "parser",
    crate_name = "openerp_dsl_parser",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "//rust/lib/api/ir",
        "@crates//:syn",
        "@crates//:quote",
        "@crates//:proc-macro2",
    ],
)

rust_test(
    name = "parser_test",
    crate = ":parser",
    deps = [
        "@crates//:serde_json",
    ],
)
