load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "schema",
    crate_name = "openerp_schema",
    srcs = glob(["**/*.rs"]),
    crate_root = "mod.rs",
    visibility = ["//rust:__subpackages__"],
    deps = [
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
    ],
)

rust_test(
    name = "schema_test",
    crate = ":schema",
)
